Bug 429465 - Pressing on "+" or "play" at a folder does nothing
Summary: Pressing on "+" or "play" at a folder does nothing
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.08.3
Platform: Other Other
: VHI normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-11-21 17:05 UTC by postix
Modified: 2020-12-08 11:17 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2020-11-21 17:05:41 UTC
SUMMARY

Since drag and drop does not work at all yet and also selecting multiple files at once does lead me to the "recently played" section (#429460) I tried to add a whole folder by the "+" symbol. However, clicking it does not result in any action. 

Also pressing on the overlay "play" button does not do anything.

STEPS TO REPRODUCE
1. Folder section
2. Go to your folders with mp3s, let's call it "Music"
3. click on the "+" button of "Music"

OBSERVED RESULT

Nothing happens. I have no clue how to proceed from here.

EXPECTED RESULT

The whole content is added to the playlist


SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.20.3
KDE Frameworks Version: 5.76.0
Qt Version: 5.15.1
Comment 1 Nate Graham 2020-11-23 18:21:57 UTC
Can reproduce.

Console logs say:

kf.kio.core: Invalid URL: QUrl("")
Comment 2 Matthieu Gallien 2020-12-07 23:51:53 UTC
Git commit 710275fd7f7efc977f542f59061a0599a089b8e7 by Matthieu Gallien.
Committed on 07/12/2020 at 22:38.
Pushed by ngraham into branch 'release/20.12'.

properly enqueue files from file browser to playlist

M  +21   -2    src/models/filebrowserproxymodel.cpp

https://invent.kde.org/multimedia/elisa/commit/710275fd7f7efc977f542f59061a0599a089b8e7
Comment 3 postix 2020-12-08 11:17:07 UTC
At this point, I would like to thank Matthieu Gallien for your great work and app! :)