properly enqueue files from file browser to playlist

BUG: 429465